src/objects/CAREDataTransferNote__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>2010</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentCounselorPIDM__c</fullName>
        <label>Enrollment Counselor PIDM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WguainfID__c</fullName>
        <label>Wguainf ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CARE Data Transfer Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NOTE={0}</displayFormat>
        <label>CARE Data Transfer Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Data Transfer Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>